# kaggle-downloader

./: README.md  pyproject.toml
kaggle_ds_downloader/: __main__.py
